# LinuxWidgtesTest

./: CMakeLists.txt  CMakeSettings.json
Hello/: CMakeLists.txt  main.cpp
